tests/toy/neg/001132_mutation.toylang
program a = { if program then sleep; } .
